--- a/Shopping/pubspec.yaml
+++ b/Shopping/pubspec.yaml
@@ -34,6 +34,7 @@ dev_dependencies:
   provider: ^4.1.2
   intl: ^0.16.1
   http: ^0.12.1
+  shared_preferences: ^0.5.7+3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
