--- a/Places/ios/Runner/Info.plist
+++ b/Places/ios/Runner/Info.plist
@@ -26,6 +26,11 @@
 	<string>We need to take a pictue</string>
 	<key>NSCameraUsageDescription</key>
 	<string>We need to take a pictue</string>
+	
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We need your location</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>We need to get your location</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -45,5 +50,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>io.flutter.embedded_views_preview</key>
+	<true/>
 </dict>
 </plist>
