--- a/Places/pubspec.yaml
+++ b/Places/pubspec.yaml
@@ -27,6 +27,9 @@ dependencies:
   image_picker: ^0.6.6+4
   path_provider: ^1.6.9
   path: ^1.7.0
+  sqflite: ^1.3.0+1
+  location: ^3.0.2
+  google_maps_flutter: ^0.5.28+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
