--- a/Places/android/app/src/main/AndroidManifest.xml
+++ b/Places/android/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="Places"
         android:icon="@mipmap/ic_launcher">
         <meta-data android:name="com.google.android.geo.API_KEY"
-               android:value="AIzaSyA3YzvNEbNSunHZUjxkDIctpoUwdn48tOY"/>
+               android:value="API_KEY"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
